--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: "weekly"
     commit-message:
-      prefix: "Chore: "
+      prefix: 'chore: '
     labels:
       - github_actions
       - dependabot
